--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -208,7 +208,7 @@
                     <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3">
                     <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1">
                     <input type="number" placeholder="Min Req" data-input-type="req_min" min="0">
-                    <ために type="number" placeholder="Max Req" data-input-type="req_max" min="0">
+                    <input type="number" placeholder="Max Req" data-input-type="req_max" min="0">
                 </div>
                 <button type="button" class="add-button" onclick="addRequirementInput()">Add Requirement</button>
             </div>
