--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -163,7 +163,7 @@
     <p>Based on our interviews with nurses from three different cities in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences). This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog.</p>
     <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Shift requirements (number of nurses needed per shift across the planning horizon). c) Preferences of each nurse for each shift (if available). You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
     <p>If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
-    <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs, including CSV reports and a PDF nurse report, are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
+    <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
 
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
@@ -233,7 +233,7 @@
 
     <div id="reports">
         <h2>Reports</h2>
-        <p id="reports-caption">The below reports and PDF are sample outputs based on template inputs. The optimal reports and PDF based on your inputs will be available here after generating the new schedule.</p>
+        <p id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
         <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
@@ -241,7 +241,7 @@
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
-        <a id="nurse-pdf" href="#" style="display: none;">Download Nurse Reports (PDF)</a>
+        <a id="nurse-reports-pdf" href="#" style="display: none;">Download Nurse Reports (PDF)</a>
     </div>
 
     <div id="gantt-chart">
@@ -556,8 +556,8 @@
             document.getElementById('schedule-csv').style.display = 'none';
             document.getElementById('stats-csv').style.display = 'none';
             document.getElementById('coverage-csv').style.display = 'none';
-            document.getElementById('nurse-pdf').style.display = 'none';
-            document.getElementById('reports-caption').innerText = 'The below reports and PDF are sample outputs based on template inputs. The optimal reports and PDF based on your inputs will be available here after generating the new schedule.';
+            document.getElementById('nurse-reports-pdf').style.display = 'none';
+            document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
 
             try {
                 const mergedData = await mergeInputs(nursesFile, preferencesFile, requirementsFile);
@@ -595,7 +595,7 @@
                     document.getElementById('schedule-csv').href = outputBaseURL + 'optimal_schedule.csv';
                     document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
                     document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
-                    document.getElementById('nurse-pdf').href = outputBaseURL + 'nurse_reports.pdf';
+                    document.getElementById('nurse-reports-pdf').href = outputBaseURL + 'nurse_reports.pdf';
                     document.getElementById('schedule-placeholder').style.display = 'none';
                     document.getElementById('stats-placeholder').style.display = 'none';
                     document.getElementById('coverage-placeholder').style.display = 'none';
@@ -603,8 +603,8 @@
                     document.getElementById('schedule-csv').style.display = 'block';
                     document.getElementById('stats-csv').style.display = 'block';
                     document.getElementById('coverage-csv').style.display = 'block';
-                    document.getElementById('nurse-pdf').style.display = 'block';
-                    document.getElementById('reports-caption').innerText = 'The below reports and PDF contain the optimal nurse schedule, statistics, and individual nurse reports based on your inputs.';
+                    document.getElementById('nurse-reports-pdf').style.display = 'block';
+                    document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule, statistics, and detailed nurse reports based on your inputs.';
                 }
             } catch (error) {
                 document.getElementById('status').innerText = 'Error: ' + error.message;
