--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -233,8 +233,7 @@
 
     <div id="reports">
         <h2>Reports</h2>
-        <p class="note">Download the generated reports in CSV format.</p>
-        <span id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</span>
+        <p id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
         <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
