--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -170,7 +170,6 @@
         <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
         <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
         <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
-        
     </div>
 
     <div class="input-section">
@@ -182,7 +181,6 @@
         <input type="file" id="requirementsFile" accept=".csv">
         <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
         <input type="file" id="preferencesFile" accept=".csv">
-        
     </div>
 
     <div class="input-section">
@@ -210,7 +208,7 @@
                     <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3">
                     <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1">
                     <input type="number" placeholder="Min Req" data-input-type="req_min" min="0">
-                    <ために type="number" placeholder="Max Req" data-input-type="req_max" min="0">
+                    <input type="number" placeholder="Max Req" data-input-type="req_max" min="0">
                 </div>
                 <button type="button" class="add-button" onclick="addRequirementInput()">Add Requirement</button>
             </div>
@@ -239,9 +237,11 @@
         <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
+        <a id="pdf-placeholder" href="templates/placeholder_nurse_reports.pdf" download="placeholder_nurse_reports.pdf">Download Sample Nurse Reports (PDF)</a>
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
+        <a id="reports-pdf" href="#" style="display: none;">Download Nurse Reports (PDF)</a>
     </div>
 
     <div id="gantt-chart">
@@ -298,7 +298,9 @@
         // Add requirement input
         function addRequirementInput() {
             const requirementsInput = document.getElementById('requirements-input');
-            const inputs = requirementsInput.querySelector('.input-line:not(.entered-item)').querySelectorAll('input');
+            const inputs окреми
+
+            requirementsInput.querySelector('.input-line:not(.entered-item)').querySelectorAll('input');
             const error = validateInputs(inputs, true);
             if (error) {
                 alert(error);
@@ -552,9 +554,11 @@
             document.getElementById('schedule-placeholder').style.display = 'block';
             document.getElementById('stats-placeholder').style.display = 'block';
             document.getElementById('coverage-placeholder').style.display = 'block';
+            document.getElementById('pdf-placeholder').style.display = 'block';
             document.getElementById('schedule-csv').style.display = 'none';
             document.getElementById('stats-csv').style.display = 'none';
             document.getElementById('coverage-csv').style.display = 'none';
+            document.getElementById('reports-pdf').style.display = 'none';
             document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
 
             try {
@@ -593,12 +597,15 @@
                     document.getElementById('schedule-csv').href = outputBaseURL + 'optimal_schedule.csv';
                     document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
                     document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
+                    document.getElementById('reports-pdf').href = outputBaseURL + 'nurse_schedule_reports.pdf';
                     document.getElementById('schedule-placeholder').style.display = 'none';
                     document.getElementById('stats-placeholder').style.display = 'none';
                     document.getElementById('coverage-placeholder').style.display = 'none';
+                    document.getElementById('pdf-placeholder').style.display = 'none';
                     document.getElementById('schedule-csv').style.display = 'block';
                     document.getElementById('stats-csv').style.display = 'block';
                     document.getElementById('coverage-csv').style.display = 'block';
+                    document.getElementById('reports-pdf').style.display = 'block';
                     document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule and statistics based on your inputs.';
                 }
             } catch (error) {
